feat: add endpoint to re-activate a workflow version
